Core Refactored